fix(compact-page-header): synchronize var spacing tokens between padding and padding cancellation (#3562)
* fix(compact-page-header): synchronize var spacing tokens between padding and padding cancellation

--- a/ui/components/page-headers/base/_index.scss
+++ b/ui/components/page-headers/base/_index.scss
@@ -14,7 +14,7 @@
  */
 
 .slds-page-header {
-  padding: $var-spacing-medium;
+  padding: $var-spacing-vertical-medium $var-spacing-horizontal-medium;
   border-bottom: $border-width-thin solid $page-header-color-border;
   border-radius: $page-header-border-radius;
   background: $page-header-color-background;
